--- a/index.html
+++ b/index.html
@@ -6,37 +6,62 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.6.3/css/all.css” integrity=“sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/” crossorigin=“anonymous”>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 </head>
-<body>
-    <nav class="navbar gooFont navbar-dark navCustom">
-        <a href="" class="navbar-brand"><i class="fas fa-feather-alt mr-2"></i>safetyScore</a> <!-- now add the navbar brand; we put it inside the container so it keeps the background but moves the font over -->
-    </nav>
-
-<div class="container">
-    <div class="row">
-        <div class="col-12 searchBar">Address</div>
+<body class="">
+    <div class=“jumbotron gooFont text-center mb-auto” id=“jumboStyling”> 
+        <nav class="navbar gooFont navbar-dark navCustom">
+            <a href="" class="navbar-brand"><i class="fas fa-feather-alt mr-2"></i>safetyScore</a> <!-- now add the navbar brand; we put it inside the container so it keeps the background but moves the font over -->
+        </nav>
     </div>
-    <div class="row">
-            <div class="col-12 col-md-8 map"><img src="http://placehold.it/500x500"></div>
-            <div class="col-12 col-md-4 score-key">2 boxes here</div>
-        </div>
-    <div class="row">
-        
+    <div class="jumbotron gooFont text-center mb-auto" id="jumboStyling">
+        <p class="title mainTitle display-3">Keeping you safe</p>
+        <h3 class="lead pb-3">subtext if needed<br>subtext if needed<br>subtext if needed</h3>
     </div>
-    <div class="row">
-        <div class="col-12 col-md-8 dataAnal">
-            Data Analytics
+    <div class="container">
+        <div class="row">
+            <div class="col-12 searchBar">Address</div>
         </div>
-        <div class="col-12 col-md-4">
-            graph parameters
+        <div class="row">
+            <div class="col-12 col-md-8 map">
+                <img src="http://placehold.it/500x500">
+            </div>
+            <div class="col-12 col-md-4 score-key">
+                <div class="row">
+                    <div class="safetyScore col-12">Safety Score</div>
+                    <div class="key col-12">Key</div>
+                </div>
+            </div>
         </div>
+        <div class="row"></div>
+        <div class="row">
+            <div class="col-12 col-md-8 dataAnal">Data Analytics</div>
+            <div class="col-12 col-md-4">graph parameters</div>
+        </div>
+        <div class="row"></div>
     </div>
-    <div class="row"></div>
-    
-
-</div>
+    <footer class="footerDiv col-12 sticky-bottom bg-dark text-light">
+        <div class="row">
+            <div class="leftFooter col-6 d-flex justify-content-start">
+                <div class="leftBottom1 p-2 bd-highlight">
+                    <a class="text-secondary" href="#">About</a>
+                </div>
+                <div class="leftBottom2 p-2 bd-highlight">
+                    <a class="text-secondary" href="#">Help</a>
+                </div>
+            </div>
+            <div class="rightFooter col-6 d-flex justify-content-end">
+                <div class="rightBottom1 p-2 bd-highlight">
+                    <p class="text-secondary">Copyright © 2018 CJNZ Inc.</p>
+                </div>
+                <div class="rightBottom2 p-2 bd-highlight">
+                        <p class="text-secondary">All rights reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
