--- a/index.html
+++ b/index.html
@@ -22,11 +22,22 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-12 searchBar">Address</div>
+            <div class="col-12 searchBar text-light">
+                <form class="d-flex justify-content-center">
+                <label class="px-3" for="exampleInputPassword1">Address</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Address">
+                        <div class="input-group-append">
+                            <button type="submit" class="btn btn-primary">Search</button>
+                        </div>
+                    </div>
+                    
+                </form>
+            </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-8 map">
-                <img src="http://placehold.it/500x500">
+            <div class="col-12 col-md-8 map d-flex justify-content-center p-3">
+                <img src="http://placehold.it/400x400">
             </div>
             <div class="col-12 col-md-4 score-key">
                 <div class="row">
@@ -42,7 +53,7 @@
         </div>
         <div class="row"></div>
     </div>
-    <footer class="footerDiv col-12 sticky-bottom bg-dark text-light">
+    <footer class="footerDiv col-12 sticky-bottom text-light">
         <div class="row">
             <div class="leftFooter col-6 d-flex justify-content-start">
                 <div class="leftBottom1 p-2 bd-highlight">
