--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                             <button type="submit" class="btn btn-primary">Search</button>
                         </div>
                     </div>
-                    <p> hello jr</p>
                 </form>
             </div>
         </div>
@@ -73,6 +72,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.js"></script>
     <script src="./config.js"></script>
     <script src="./maps.js"></script>
     <script src="./scripts.js"></script>
