started geocoding functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                             <button type="submit" class="btn btn-primary">Search</button>
                         </div>
                     </div>
-                    <p> hello jr</p>
                 </form>
             </div>
         </div>
@@ -46,7 +45,18 @@
         </div>
         <div class="row"></div>
         <div class="row">
-            <div class="col-12 col-md-8 dataAnal">Data Analytics</div>
+            <div class="col-12 col-md-8 dataAnal">
+                <table id="crime_table">
+                    <thead>
+                        <tr>
+                            <th>crime</th>
+                            <th>date</th>
+                            <th>address</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
             <div class="col-12 col-md-4">graph parameters</div>
         </div>
         <div class="row"></div>
