--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         </div>
         <div class="row"></div>
         <div class="row">
-            <div class="col-12 col-md-8 dataAnal">Data Analytics</div>
+            <div class="col-12 col-md-8 dataAnal">
+                <canvas id="myChart" width="200" height="200"></canvas>
+            </div>
             <div class="col-12 col-md-4">graph parameters</div>
         </div>
         <div class="row"></div>
