--- a/index.html
+++ b/index.html
@@ -10,67 +10,13 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 </head>
-<body class="body">
-    <div class=“jumbotron gooFont text-center mb-auto” id=“jumboStyling”> 
-        <nav class="navbar gooFont navbar-dark navCustom">
-            <a href="" class="navbar-brand"><i class="fas fa-feather-alt mr-2"></i>safetyScore</a> <!-- now add the navbar brand; we put it inside the container so it keeps the background but moves the font over -->
-        </nav>
+
+<body>
+    <div class="container-fluid">
+        
     </div>
-    <div class="jumbotron gooFont text-center mb-auto" id="jumboStyling">
-        <p class="title mainTitle display-3">Keeping you safe</p>
-        <h3 class="lead pb-3">subtext if needed<br>subtext if needed<br>subtext if needed</h3>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 searchBar text-light">
-                <form class="d-flex justify-content-center">
-                <label class="px-3" for="exampleInputPassword1">Address</label>
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Address">
-                        <div class="input-group-append">
-                            <button type="submit" class="btn btn-primary">Search</button>
-                        </div>
-                    </div>
-                    
-                </form>
-            </div>
-        </div>
-        <div class="row">
-            <div id="map_holder" class="col-12 col-md-8 d-flex justify-content-center p-3"></div>
-            <div class="col-12 col-md-4 score-key">
-                <div class="row">
-                    <div class="safetyScore col-12">Safety Score</div>
-                    <div class="key col-12">Key</div>
-                </div>
-            </div>
-        </div>
-        <div class="row"></div>
-        <div class="row">
-            <div class="col-12 col-md-8 dataAnal">Data Analytics</div>
-            <div class="col-12 col-md-4">graph parameters</div>
-        </div>
-        <div class="row"></div>
-    </div>
-    <footer class="footerDiv col-12 sticky-bottom text-light">
-        <div class="row">
-            <div class="leftFooter col-6 d-flex justify-content-start">
-                <div class="leftBottom1 p-2 bd-highlight">
-                    <a class="text-secondary" href="#">About</a>
-                </div>
-                <div class="leftBottom2 p-2 bd-highlight">
-                    <a class="text-secondary" href="#">Help</a>
-                </div>
-            </div>
-            <div class="rightFooter col-6 d-flex justify-content-end">
-                <div class="rightBottom1 p-2 bd-highlight">
-                    <p class="text-secondary">Copyright © 2018 CJNZ Inc.</p>
-                </div>
-                <div class="rightBottom2 p-2 bd-highlight">
-                        <p class="text-secondary">All rights reserved</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+</body>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="./config.js"></script>
