--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.js"></script>
     <script src="./config.js"></script>
     <script src="./maps.js"></script>
+    <script src="./chart.js"></script>
     <script src="./scripts.js"></script>
 </body>
 </html>
