with small styling

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
         </div>
 
-        <!-- <div class="row">
+        <div class="row">
             <div id="map_holder" class="col-12 col-md-8 d-flex justify-content-center p-3"></div>
             <div class="col-12 col-md-4 score-key">
                 <div class="row">
@@ -152,7 +152,8 @@
         </div>
 
         <div class="row"></div>
-    </div>
+        </div>
+        
     <footer class="footerDiv col-12 sticky-bottom text-light">
         <div class="row">
             <div class="leftFooter col-6 d-flex justify-content-start">
@@ -172,7 +173,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
 
     
