--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
 
         <div class="row d-flex justify-content-center">
-            <div id="map_holder" class="col-12 col-md-8"></div>
+            <div id="map_holder" class="col-12 col-md-8 pb-5"></div>
             <!-- <div class="col-12 col-md-4 score-key">
                 <div class="row">
                     <div class="safetyScore col-12">Safety Score</div>
@@ -162,7 +162,7 @@
         <div class="row"></div>
 
         <div class="row d-flex justify-content-center">
-            <div class="col-12 col-md-8 dataAnal">
+            <div class="col-12 col-md-8 py-5 dataAnal">
                 <canvas id="myChart" width="400" height="400"></canvas>
             </div>
             <!-- <div class="col-12 col-md-4">graph parameters</div> -->
