--- a/index.html
+++ b/index.html
@@ -3,142 +3,92 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>iSafety</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.6.3/css/all.css” integrity=“sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/” crossorigin=“anonymous”>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="./config.js"></script>
-    <script src="./image.js"></script>
     <script src="./maps.js"></script>
     <script src="./maps2.js"></script>
     <script src="./chart.js"></script>
-    <script src="./scripts.js"></script>
 </head>
 
 <body>        
-    <!-- Start of my additions -->
-<nav class="navbar navbar-expand-md topBar sticky-top py-3"> 
-        <!-- the breakpoint from the expanded navigation to the mobile navigation; sticky-top as opposed to fixed-->
-        <!-- I removed navbar-light and bg-light; -->
-    <div class="container-fluid"> <!-- container-fliud will allow our row to take up 100% of the screen-->
-    <div row="testCase">
-        <a class="navbar-brand logoTop" href="#"> <img src="picsForProject/safeSymbol.png" width="30" height="30" alt="">iSafety</a> <!--logo,link, image-->
-        <button class="navbar-toggler" type="button" dat-toggle="collapse" data-target="#navbarResponsive">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-                <!--This will be the info the right side of our navbar. Ask me how, I copied it straight from Bootstrap-->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">        <!--originally had navbarSupportedContent but not sure what it was for...-->
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link topBar" href="#">Home <span class="sr-only">(current)</span></a>     <!--    WHY topBar ON EACH AND EVERY ONE? -->
-            </li>
-            <li class="nav-item">
-                <a class="nav-link topBar" href="#">About Us</a>        <!--    WHY topBar ON EACH AND EVERY ONE? -->
-            </li>
-            <li class="nav-item">
-                <a class="nav-link topBar" href="#">Contact Us</a>      <!--    WHY topBar ON EACH AND EVERY ONE? -->
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled topBar" tabindex="-1" aria-disabled="true" id="login">Login</a>     <!--for visual styling and using the gray-out feature; could be useful later-->
-            </li>
-        </ul>
-    </div>
-</div>          
-</nav><!-- Our Navbar Closing Div -->
+    <nav class="navbar navbar-expand-md topBar sticky-top py-3"> 
+        <div class="container-fluid">
+            <div row="testCase">
+                <a class="navbar-brand logoTop" href="#">
+                    <img src="picsForProject/safeSymbol.png" width="30" height="30" alt="">iSafety
+                </a>
+                <button class="navbar-toggler" type="button" dat-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link topBar" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link topBar" href="#">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link topBar" href="#">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled topBar" tabindex="-1" aria-disabled="true" id="login">Login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>          
+    </nav>
 
-<!-- OUR CAROUSEL -->
-        <!--            WHAT IS @MEDIA IN CSS? BUT I CAN'T GET MY CAROSEL TO FAD-->
-<div id="carouselExampleFade" class="carousel slide carousel-fade theImages" data-ride="carousel">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade theImages" data-ride="carousel">
         <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-              </ol>
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active" style="background-image: url(picsForProject/darkNightStreet.jpg)"> 
-            <!-- <img src="picsForProject/darkNightStreet.jpg" class="d-block w-100" alt="..."> -->
-            <div class="carousel-caption">
+            <div class="carousel-item active" style="background-image: url(picsForProject/darkNightStreet.jpg)"> 
+                <div class="carousel-caption">
                     <h1>iSafety</h1>
                     <p>Informed</p>
-                  </div>
-          </div>
-          <div class="carousel-item" style="background-image: url(picsForProject/alleyAtDark.jpg)">
-            /* <!-- <img src="picsForProject/alleyAtDark.jpg" class="d-block w-100" alt="..."> --> 
-            <div class="carousel-caption">
+                </div>
+            </div>
+            <div class="carousel-item" style="background-image: url(picsForProject/alleyAtDark.jpg)">
+                <div class="carousel-caption">
                     <h1>iSafety</h1>
                     <p>Peace of Mind</p>
-                  </div>
-          </div>
-          <div class="carousel-item" style="background-image: url(picsForProject/CTsurburbia.jpg)">
-            <!-- <img src="picsForProject/CTsurburbia.jpg" class="d-block w-100" alt="..."> -->
-            <div class="carousel-caption">
+                </div>
+            </div>
+            <div class="carousel-item" style="background-image: url(picsForProject/CTsurburbia.jpg)">
+                <div class="carousel-caption">
                     <h1>iSafety</h1>
                     <p>Local Trends</p>
-                  </div>
-          </div>
+                </div>
+            </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
         </a>
-      </div>
-
-<!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="picsForProject/darkNightStreet.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="picsForProject/alleyAtDark.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="picsForProject/inTheBronx.jpeg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div> -->
-<!-- ______________----------------------------_________________________---------------------------______ -->
-
-<!-- <div class="jumbotron jumbotron-fluid transitionElement">
-    <div class="container-fluid textFont">
-        <h1 class="display-4">Did You Know</h1>
-        <h4>ANY TEXT HERE?</h4>
-            <p class="lead">The most common hours for a burglary to occur are between 10am-3pm</p>
-            <p class="lead">Robberies down by 24 % between 2012 and 2016.</p>
-        </div>
-      </div> -->
-
-
-
-
-<!-- ______________----------------------------_________________________---------------------------______ -->
-
-
+    </div>
 
     <div class="container">
         <div class="row pt-5 pb-2 d-flex justify-content-center">
             <div class="col-12 searchBar text-light d-flex justify-content-center">
-                <form  onsubmit="submitForm(event)" class="d-flex justify-content-center">
-                <!-- <label class="px-3" for="exampleInputPassword1">address</label> -->
+                <form onsubmit="submitForm(event)" class="d-flex justify-content-center">
                     <div class="input-group">
                         <input type="text" class="form-control" id="searchBar" size="80" placeholder="Address">
                         <div class="input-group-append">
@@ -148,37 +98,24 @@
                 </form>
             </div>
         </div>
-
         <div class="row d-flex justify-content-center">
             <div id="map_holder" class="col-12 col-md-8 pb-5"></div>
-            <!-- <div class="col-12 col-md-4 score-key">
-                <div class="row">
-                    <div class="safetyScore col-12">Safety Score</div>
-                    <div class="key col-12">Key</div>
-                </div>
-            </div> -->
         </div>
-
-        <div class="row"></div>
-
         <div class="row d-flex justify-content-center">
             <div class="col-12 col-md-8 py-5 dataAnal">
                 <canvas id="myChart" width="400" height="400"></canvas>
             </div>
-            <!-- <div class="col-12 col-md-4">graph parameters</div> -->
-         </div>
-
-        <div class="row"></div>
         </div>
-        
+    </div>
+
     <footer class="footerDiv col-12 sticky-bottom py-2">
         <div class="row footColor">
             <div class="leftFooter col-6 d-flex justify-content-start">
                 <div class="leftBottom1 p-2 bd-highlight">
-                    <a class="footColor" href="#">About</a>
+                    <a class="footColor" href="#"></a>
                 </div>
                 <div class="leftBottom2 p-2 bd-highlight">
-                    <a class="footColor" href="#">Help</a>
+                    <a class="footColor" href="#"></a>
                 </div>
             </div>
             <div class="rightFooter col-6 d-flex justify-content-end">
@@ -186,14 +123,13 @@
                     <p>Copyright © 2018 CJNZ Inc.</p>
                 </div>
                 <div class="rightBottom2 p-2 bd-highlight">
-                        <p>All rights reserved</p>
+                    <p>All rights reserved</p>
                 </div>
             </div>
         </div>
     </footer>
 
-
-                  
+    <script src="./scripts.js"></script>
 
 </body>
 </html>
