--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     </div>
 
     <div class="container">
-        <div class="row pt-5 pb-2 d-flex justify-content-center">
+        <div class="row pt-3 pb-2 d-flex justify-content-center">
             <div class="col-12 searchBar text-light d-flex justify-content-center">
                 <form onsubmit="submitForm(event)" class="d-flex justify-content-center">
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="searchBar" size="80" placeholder="Address">
+                    <div class="input-group border border-secondary map-rounded">
+                        <input type="text" class="form-control" id="searchBar" size="81.65" placeholder="Address">
                         <div class="input-group-append">
                             <button type="submit" class="btn btn-primary">Search</button>
                         </div>
@@ -98,8 +98,8 @@
                 </form>
             </div>
         </div>
-        <div class="row d-flex justify-content-center">
-            <div id="map_holder" class="col-12 col-md-8 pb-5"></div>
+        <div class="row d-flex pt-1 justify-content-center">
+            <div id="map_holder" class="col-12 col-md-8 pb-5 border border-secondary map-rounded"></div>
         </div>
         <div class="row d-flex justify-content-center">
             <div class="col-12 col-md-8 py-5 dataAnal">
